--- a/index.html
+++ b/index.html
@@ -5,14 +5,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Antivirus</title>
+  <title>Ejemplo</title>
 </head>
 
 <body>
-  <h1>Grupo de Estudio</h1>
-  <h2>Desarrollo Web</h2>
+  <h1 style="color:rgb(6, 6, 239);">Encabezado 1</h1>
+  <h2 style="font-family:fantasy;">Encabezado 2</h2>
+  <h3 style="text-align:center;">Encabezado 3</h3>
 
-  <p>Bienvenidos al Grupo de estudio de desarrollo web con Antivirus</p>
+  <p style="text-align:end;"><b>Lorem ipsum</b> <strong>dolor sit amet,</strong> <em>consectetur adipiscing elit.</em> <br>Proin dictum vestibulum erat, at dapibus tellus sollicitudin id.<br> Etiam ac viverra tellus, sit amet pretium magna.<br> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+
+  <hr>
+
+  <p><b>Lorem ipsum</b> <strong>dolor sit amet,</strong> <em>consectetur adipiscing elit.</em> <br>Proin dictum vestibulum erat, at dapibus tellus sollicitudin id.<br> Etiam ac viverra tellus, sit amet pretium magna.<br> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+
+  <hr>
+
+  <pre>
+    Estrellita donde estas
+    me pregunto que seras
+  </pre>
+  
+  <a href="https://www.google.com.co/?gfe_rd=cr&ei=WMzbVOzwA8mJqQXtnoAo&gws_rd=ssl">Rick</a>
+
+  <!--<img src="peppa.jpg" alt="Peppa la cerdita" width="350" height="350">-->
+
+  <table border="3">
+    <tr>
+      <th>Nombre</th>
+      <th>Apellido 1</th>
+      <th>Apellido2</th>
+    </tr>
+    <tr>
+      <td>Angelika</td>
+      <td>Moya</td>
+      <td>Moya</td>
+    </tr>
+    <tr>
+      <td>Alejandra</td>
+      <td>Uribe</td>
+      <td>Uribe</td>
+    </tr>
+  </table>
+  <hr><br><br>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JAVASCRIPT</li>
+  </ul>
+  <br><br><br>
+  <ol>
+    <li>HTML</li>
+    <ul>
+      <li>Etiqueta <strong>sirve para Parrafos</strong> </li>
+    </ul>
+    <li>CSS</li>
+    <li>JAVASCRIPT</li>
+  </ol>
+  <br><br><br>
+  <dl>
+    <dt>HTML</dt>
+    <dd>Etiqueta <strong>sirve para Parrafos</strong> </dd>
+    <dt>CSS</dt>
+    <dd>Etiqueta <strong>sirve para Parrafos</strong> </dd>
+    <dt>JAVASCRIPT</dt>
+    <dd>Etiqueta <strong>sirve para Parrafos</strong> </dd>
+  </dl>
+  
+  <hr>
+  <br><br>
+
+  <form >
+    <label for="user">Usuario:</label>
+    <input type="text">
+    <br>
+    <label for="password">Contraseña:</label>
+    <input type="password">
+  </form>
+  <hr>
+  <br><br><br>
+
+  <div class="clase">
+    
+  </div>
 </body>
 
 </html>
+
