--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -9,18 +9,26 @@
 
 <body>
 
-  <div class="aifon">
+  <div id="aifon">
+    <div id="island">
+
+    </div>
+
     <div id="resultado">
       <h2>0</h2>
     </div>
 
-    <div class="teclado">
+    <div id="teclado">
 
-      <div class="top">
-
+      <div id="top">
+        <div class="columna">
+          <button>AC</button>
+          <button>+/-</button>
+          <button>%</button>
+        </div>
       </div>
 
-      <div class="numbers">
+      <div id="numbers">
         <div class="columna">
           <button>7</button>
           <button>8</button>
@@ -40,17 +48,25 @@
         </div>
 
         <div class="columna">
-          <button id="punto">0</button>
+          <button id="cero">0</button>
           <button>.</button>
         </div>
 
       </div>
 
-      <div class="right">
-
+      <div id="operations">
+        <div class="fila">
+          <button>&divide;</button>
+          <button>&#215;</button>
+          <button>&minus;</button>
+          <button>&plus;</button>
+          <button>&equals;</button>
+        </div>
       </div>
 
     </div>
+
+    <div id="gestos"></div>
   </div>
 
 </body>
